# CompareCSV

./: CMakeLists.txt  VersionInfo.cmake
MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
main/: CMakeLists.txt  main.cpp
